Configure turnout gem with custom 'default reason' text

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -28,7 +28,7 @@
             <main class='govuk-main-wrapper' id='main-content' role='main'>
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds govuk-body-l">
-                        <h1 class="govuk-heading-xl">Down for Maintenance</h1>
+                        <h1 class="govuk-heading-xl">Sorry, this service is currently unavailable</h1>
                         <div class="govuk-heading-l">
                             {{ reason }}
                         </div>
@@ -38,7 +38,7 @@
         </div>
     </body>
 
-    <footer class="govuk-footer " role="contentinfo">
+    <footer class="govuk-footer" role="contentinfo">
         <div class="govuk-width-container ">
             <div class="govuk-footer__meta">
                 <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
